add simple work time calculator

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Egor Utils</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Work Time Calculator</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<div class="container">
+    <label for="inputNumber" id="labelText">Стоимость</label>
+    <input type="number" id="inputNumber" placeholder="BYN">
+    <p id="resultText"></p>
+</div>
+<script src="script.js"></script>
 </body>
 </html>
