add currencies, better time displaying, improve design

--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
 </head>
 <body>
 <div class="container">
-    <label for="inputNumber" id="labelText">Стоимость</label>
-    <input type="number" id="inputNumber" placeholder="BYN">
-    <p id="resultText"></p>
+    <input type="number" id="inputBYN" placeholder="">
+    <label for="inputBYN" id="labelBYN" class="label-tip">BYN</label>
+
+    <input type="number" id="inputUSD" placeholder="">
+    <label for="inputUSD" id="labelUSD" class="label-tip">USD</label>
+
+    <input type="number" id="inputEUR" placeholder="">
+    <label for="inputEUR" id="labelEUR" class="label-tip">EUR</label>
 </div>
+<div><p id="resultText"></p></div>
 <script src="script.js"></script>
 </body>
 </html>
